[tool.poetry]
name = "delivery"
version = "0.1.0"
description = ""
authors = ["Martin Courtois <martin.courtois@protonmail.com>"]
readme = "README.md"
packages = [{include = "delivery", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
